--- a/sample.V21/AtomicCoordinate2Descriptor_Parts.yml
+++ b/sample.V21/AtomicCoordinate2Descriptor_Parts.yml
@@ -1,94 +1,94 @@
 workflow:
-  format: v2.2
+  format: v2.1
   block:
   - blockname: CrystalCoordinatesToRelativeVectors
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: Crystal
-        - outputtype: parts
+        - funcname: Crystal
+        - functype: parts
       - !!omap
-        - outputname: ChooseCenterAtom
-        - outputtype: function
+        - funcname: ChooseCenterAtom
+        - functype: function
     - group:
       - !!omap
         - methodname: AbsolutePositionToRelativeCoorinates
         - methodtype: method
-        - outputname: relativeCoordiantes
-        - outputtype: parts
+        - funcname: relativeCoordiantes
+        - functype: parts
   - blockname: Behler symmetry function
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: relativeCoordiantes
-        - outputtype: parts
+        - funcname: relativeCoordiantes
+        - functype: parts
     - group:
       - !!omap
         - methodname: relativeRadialDistributionWithAngleConvolution
         - methodtype: parts
-        - outputname: BehlerSymmetryFunction3bodyVector
-        - outputtype: parts
+        - funcname: BehlerSymmetryFunction3bodyVector
+        - functype: parts
   - blockname: RDF
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: relativeCoordiantes
-        - outputtype: parts
+        - funcname: relativeCoordiantes
+        - functype: parts
     - group:
       - !!omap
         - methodname: relativeRadialDistribution
         - methodtype: parts
-        - outputname: RadialDistributionFunctionVector
-        - outputtype: parts
+        - funcname: RadialDistributionFunctionVector
+        - functype: parts
     - group:
       - !!omap
         - methodname: relativeRadialDistributionConvolution
         - methodtype: parts
-        - outputname: BehlerSymmetryFunction2bodyVector
-        - outputtype: parts
+        - funcname: BehlerSymmetryFunction2bodyVector
+        - functype: parts
   - blockname: Voronoi
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: relativeCoordiantes
-        - outputtype: parts
+        - funcname: relativeCoordiantes
+        - functype: parts
     - group:
       - !!omap
         - methodname: VoronoiAngle
         - methodtype: method
-        - outputname: GeneralizedCoordinationNumber
-        - outputtype: parts
+        - funcname: GeneralizedCoordinationNumber
+        - functype: parts
       - !!omap
         - methodname: VoronoiAngle
         - methodtype: method
-        - outputname: VoroniiNearestNeighbourAtoms
-        - outputtype: parts
+        - funcname: VoroniiNearestNeighbourAtoms
+        - functype: parts
     - group:
       - !!omap
         - methodname: AtomicOrbitalFieldMatrix
         - methodtype: method
-        - outputname: AtomicOrbitalFieldMatrixRepresentation
-        - outputtype: parts
+        - funcname: AtomicOrbitalFieldMatrixRepresentation
+        - functype: parts
   - blockname: bispectrum
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: relativeCoordiantes
-        - outputtype: parts
+        - funcname: relativeCoordiantes
+        - functype: parts
     - group:
       - !!omap
         - methodname: 4DExpansion
         - methodtype: method
-        - outputname: 4DExpansionCoefficients
-        - outputtype: parts
+        - funcname: 4DExpansionCoefficients
+        - functype: parts
     - group:
       - !!omap
         - methodname: bispectrum
         - methodtype: method
-        - outputname: SOAPVector
-        - outputtype: parts
+        - funcname: SOAPVector
+        - functype: parts
