--- a/sample.V21/AtomicProperty_CausExpr.yml
+++ b/sample.V21/AtomicProperty_CausExpr.yml
@@ -1,81 +1,81 @@
 workflow:
-  format: v2.2
+  format: v2.1
   block:
   - blockname:
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: chooseElement
-        - outputtype: function
+        - funcname: chooseElement
+        - functype: function
     - group:
       - !!omap
         - methodname: typicalMaterials
         - methodtype: function
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
+        - funcname: chooseTypicalMaterialsOfElement
+        - functype: function
   - blockname:
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
+        - funcname: chooseTypicalMaterialsOfElement
+        - functype: function
     - group:
       - !!omap
         - methodname: XrayExperiment
         - methodtype: method
-        - outputname: experimentalCrystalGeometries
-        - outputtype: parts
+        - funcname: experimentalCrystalGeometries
+        - functype: parts
     - group:
       - !!omap
         - methodname: calculateAtomicRadius
         - methodtype: function
-        - outputname: atomicRadius
-        - outputtype: parts
+        - funcname: atomicRadius
+        - functype: parts
       - !!omap
         - methodname: calculatevdWRadius
         - methodtype: function
-        - outputname: vdWRadius
-        - outputtype: parts
+        - funcname: vdWRadius
+        - functype: parts
       - !!omap
         - methodname: calculateCovalentRadius
         - methodtype: function
-        - outputname: covalentRadius
-        - outputtype: parts
+        - funcname: covalentRadius
+        - functype: parts
   - blockname:
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: chooseTypicalMaterialsOfElement
-        - outputtype: function
+        - funcname: chooseTypicalMaterialsOfElement
+        - functype: function
     - group:
       - !!omap
         - methodname: getExperimentalIonicPotential
         - methodtype: function
-        - outputname: ExperimentalIonicPotential
-        - outputtype: parts
+        - funcname: ExperimentalIonicPotential
+        - functype: parts
       - !!omap
         - methodname: getExperimentalElectronAffinity
         - methodtype: function
-        - outputname: ExperimentalElectronAffinity
-        - outputtype: parts
+        - funcname: ExperimentalElectronAffinity
+        - functype: parts
       - !!omap
         - methodname: getExperimentalBindingEnergies
         - methodtype: function
-        - outputname: BindingEnergies
-        - outputtype: parts
+        - funcname: BindingEnergies
+        - functype: parts
   - blockname:
     order: workflow
     list:
     - group:
       - !!omap
-        - outputname: BindingEnergies
-        - outputtype: parts
+        - funcname: BindingEnergies
+        - functype: parts
     - group:
       - !!omap
         - methodname: calculateElectronNegativity
         - methodtype: function
-        - outputname: ElectronNegativity
-        - outputtype: parts
+        - funcname: ElectronNegativity
+        - functype: parts
