--- a/sample.V21/Importance_MakeScores.yml
+++ b/sample.V21/Importance_MakeScores.yml
@@ -1,5 +1,5 @@
 workflow:
-  format: v2.2
+  format: v2.1
   block:
   - blockname: all
     order: workflow
@@ -8,14 +8,14 @@ workflow:
       - !!omap
         - methodname: generateAllModels
         - methodtype: function
-        - outputname: AllModels
-        - outputtype: parts
+        - funcname: AllModels
+        - functype: parts
     - group:
       - !!omap
         - methodname: generateBestOfAllModels
         - methodtype: function
-        - outputname: BestScoreOfAll
-        - outputtype: parts
+        - funcname: BestScoreOfAll
+        - functype: parts
   - blockname: deleteGroup
     order: workflow
     list:
@@ -23,19 +23,19 @@ workflow:
       - !!omap
         - methodname: generateAllModels
         - methodtype: function
-        - outputname: AllModels
-        - outputtype: parts
+        - funcname: AllModels
+        - functype: parts
       - !!omap
         - methodname: GenerateGroup
         - methodtype: function
-        - outputname: Group
-        - outputtype: parts
+        - funcname: Group
+        - functype: parts
     - group:
       - !!omap
         - methodname: DeleteGroupFromAllModels
         - methodtype: function
-        - outputname: AllModelsExceptGroup
-        - outputtype: parts
+        - funcname: AllModelsExceptGroup
+        - functype: parts
   - blockname: deleteGroupAddSubgroup
     order: workflow
     list:
@@ -43,16 +43,16 @@ workflow:
       - !!omap
         - methodname: DeleteGroupFromAllModels
         - methodtype: function
-        - outputname: AllModelsExceptGroup
-        - outputtype: parts
+        - funcname: AllModelsExceptGroup
+        - functype: parts
       - !!omap
         - methodname: GenerateSubgroupFromGroup
         - methodtype: function
-        - outputname: Subgroup
-        - outputtype: parts
+        - funcname: Subgroup
+        - functype: parts
     - group:
       - !!omap
         - methodname: AddSubgroup
         - methodtype: function
-        - outputname: AllModelsExceptGroupWithSubgroup
-        - outputtype: parts
+        - funcname: AllModelsExceptGroupWithSubgroup
+        - functype: parts
